Refactored ALOT, added UserID check and AuthHelper.

--- a/Music Farm v2/Views/PlayHistory/GetCurrentlyPlaying.cshtml
+++ b/Music Farm v2/Views/PlayHistory/GetCurrentlyPlaying.cshtml
@@ -10,7 +10,9 @@
         <th>
             @Html.DisplayNameFor(model => model.UserName)
         </th>
-        <th>Actions</th>
+        <th>
+            Actions
+        </th>
     </tr>
 
     @foreach (var item in Model)
@@ -23,8 +25,15 @@
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
             <td>
-                @Html.ActionLink(" Vote", "Vote", null, 1, new { data_modal = "", @class = "btn btn-xs btn-info" })
-                @Html.ActionLink(" Comments", "Comments", 1, new { data_modal = "", @class = "btn btn-xs btn-info" })
+                @{ 
+                    Html.RenderAction("GetUpVoteCount", "Vote", new { PlayHistoryId = item.PlayHistoryId });
+                }
+                @{ 
+                    Html.RenderAction("GetDownVoteCount", "Vote", new { PlayHistoryId = item.PlayHistoryId });
+                }
+                @{
+                    Html.RenderAction("GetCommentCount", "Comment", new { PlayHistoryId = item.PlayHistoryId });
+                }
             </td>
         </tr>
     }
