--- a/Music Farm v2/Views/PlayHistory/GetCurrentlyPlaying.cshtml
+++ b/Music Farm v2/Views/PlayHistory/GetCurrentlyPlaying.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Music_Farm_v2.ViewModels.PlayHistoryViewModel>
 <table class="table table-bordered">
     <tr>
-        <th colspan="3">Currently playing</th>
+        <th colspan="3">Currently playing <img src="~/Content/images/CurrentlyPlaying.gif" width=110 height=30 /></th>
     </tr>
     <tr>
         <th>
@@ -19,12 +19,13 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.TrackName)
+                @Html.DisplayFor(modelItem => item.TrackName) 
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
             <td>
+
                 @{ 
                     Html.RenderAction("GetUpVoteCount", "Vote", new { PlayHistoryId = item.PlayHistoryId });
                 }
