Added functionality to Player, Vote changes affect Volume, Eject for User to Stop Track

--- a/Music Farm v2/Views/Comment/AddComment.cshtml
+++ b/Music Farm v2/Views/Comment/AddComment.cshtml
@@ -31,9 +31,14 @@
                 </tr>
             </table>
         </div>
-
         <div class="modal-footer">
             <input type="submit" value="Save" class="btn btn-xs btn-success" />
+
         </div>
     }
-</div>
+    <div class="modal-body">
+        <h4>Comments</h4>
+        @{
+            Html.RenderAction("CommentsView", "Comment", new { PlayHistoryId = Model.PlayHistoryId });
+        }
+    </div>
