--- a/Music Farm v2/Views/PlayHistory/GetCurrentlyPlaying.cshtml
+++ b/Music Farm v2/Views/PlayHistory/GetCurrentlyPlaying.cshtml
@@ -35,6 +35,16 @@
                 @{
                     Html.RenderAction("GetCommentCount", "Comment", new { PlayHistoryId = item.PlayHistoryId });
                 }
+                @{
+                    <i>@Html.ActionLink(" ", "AddFavourite", "Favourite", new { ID = item.TrackId }, new { @class = "fa fa-heart-o", @style = "font-size:15px;color:red;" })</i>
+                }
+                
+                @{
+                    if (item.UserName.ToLower() == ViewBag.ThisUser)
+                    {
+                        <i>@Html.ActionLink(" ", "StopTrack", "PlayHistory", new { ID = item.PlayHistoryId }, new { @class = "fa fa-eject", @style = "font-size:15px;color:black;" })</i>
+                    }
+                }
             </td>
         </tr>
     }
