--- a/Music Farm v2/Views/Favourite/My.cshtml
+++ b/Music Farm v2/Views/Favourite/My.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Music_Farm_v2.ViewModels.FavouriteViewModel>
+﻿@model IEnumerable<MediaFarmer.ViewModels.FavouriteViewModel>
 
 @{
     ViewBag.Title = "My Bestest most favourte tracks EVER";
 }
 
-<h2>Tracks</h2>
+<h2>My Favourites</h2>
 
 @using (Html.BeginForm("Search", "Favourite", FormMethod.Get))
 {
