--- a/Music Farm v2/Views/PlayHistory/GetCurrentlyPlaying.cshtml
+++ b/Music Farm v2/Views/PlayHistory/GetCurrentlyPlaying.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Music_Farm_v2.ViewModels.PlayHistoryViewModel>
+﻿@model IEnumerable<MediaFarmer.ViewModels.PlayHistoryViewModel>
 <table class="table table-bordered">
     <tr>
         <th colspan="3">Currently playing <img src="~/Content/images/CurrentlyPlaying.gif" width=110 height=30 /></th>
