--- a/Music Farm v2/Views/Shared/_DeleteConfirm.cshtml
+++ b/Music Farm v2/Views/Shared/_DeleteConfirm.cshtml
@@ -1,4 +1,4 @@
-﻿@model Music_Farm_v2.Models.DeleteConfirmViewModel
+﻿@model MediaFarmer.Models.DeleteConfirmViewModel
 
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
