--- a/Music Farm v2/Views/Shared/_Layout.cshtml
+++ b/Music Farm v2/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Music Farmer</title>
+    <title>@ViewBag.Title - Media Farmer</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/toastrcss")
     @Styles.Render("~/Content/jquery")
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="@Url.Action("Index", "PlayHistory")" class="navbar-brand">
-                    <img src="@Url.Content("~/Content/images/Logo.jpg")"  width="50" height="50" />
+                    <img src="@Url.Content("~/Content/images/Logo.jpg")"  width="30" height="30" />
                 </a>
             </div>
             <div class="navbar-collapse collapse">
@@ -47,7 +47,7 @@
         </div>
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Media Farmer</p>
         </footer>
     </div>
 
