--- a/Music Farm v2/Views/PlayHistory/GetCurrentlyQueued.cshtml
+++ b/Music Farm v2/Views/PlayHistory/GetCurrentlyQueued.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Music_Farm_v2.ViewModels.PlayHistoryViewModel>
+﻿@model IEnumerable<MediaFarmer.ViewModels.PlayHistoryViewModel>
 
 <table class="table table-bordered">
     <tr>
