--- a/Music Farm v2/Views/PlayHistory/GetCurrentlyPlaying.cshtml
+++ b/Music Farm v2/Views/PlayHistory/GetCurrentlyPlaying.cshtml
@@ -1,19 +1,22 @@
 ﻿@model IEnumerable<MediaFarmer.ViewModels.PlayHistoryViewModel>
-<table class="table table-bordered">
-    <tr>
-        <th colspan="3">Currently playing <img src="~/Content/images/CurrentlyPlaying.gif" width=110 height=30 /></th>
-    </tr>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.TrackName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserName)
-        </th>
-        <th>
-            Actions
-        </th>
-    </tr>
+<table class="table">
+    <thead>
+        <tr>
+            <th colspan="3">Currently playing <img src="~/Content/images/CurrentlyPlaying.gif" width=110 height=30 /></th>
+        </tr>
+
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.TrackName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserName)
+            </th>
+            <th>
+                Actions
+            </th>
+        </tr>
+    </thead>
 
     @foreach (var item in Model)
     {
@@ -39,7 +42,7 @@
                     <i>@Ajax.ActionLink(" ", "AddFavourite", "Favourite",new { ID = item.TrackId }, null, new { @class = "fa fa-heart-o", @style = "font-size:15px;color:red;" })</i>
                 }
                 @{
-                    if (item.UserName.ToLower() == ViewBag.ThisUser)
+                    if (item.UserName.ToLower() == ViewBag.ThisUser || item.UserName.ToLower() == "jukebox auto queue")
                     {
                         <i>@Ajax.ActionLink(" ", "StopTrack", "PlayHistory", new { ID = item.PlayHistoryId },null, new { @class = "fa fa-eject", @style = "font-size:15px;color:black;" })</i>
                     }
