--- a/Music Farm v2/Views/Track/Upload.cshtml
+++ b/Music Farm v2/Views/Track/Upload.cshtml
@@ -26,10 +26,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <label for="file1">Filename:</label>
+                            <label for="files">Filename:</label>
                         </td>
                         <td>
-                            <input type="file" name="files" id="file1" class="btn" multiple />
+                            <input type="file" name="files" class="btn" multiple />
                         </td>
                     </tr>
                     <tr>
