--- a/Music Farm v2/Content/PagedList.css
+++ b/Music Farm v2/Content/PagedList.css
@@ -17,8 +17,11 @@
   margin-left: -1px;
   line-height: 1.428571429;
   text-decoration: none;
-  background-color: #ffffff;
+  background-color: #222;
   border: 1px solid #dddddd;
+  border-color: #428bca;
+  color: #5bc0de;
+  border-color: #428bca;
 }
 
 .pagination > li:first-child > a,
@@ -50,7 +53,7 @@
   z-index: 2;
   color: #ffffff;
   cursor: default;
-  background-color: #428bca;
+  background-color: #5bc0de;
   border-color: #428bca;
 }
 
@@ -58,10 +61,10 @@
 .pagination > .disabled > a,
 .pagination > .disabled > a:hover,
 .pagination > .disabled > a:focus {
-  color: #999999;
+  color: #5bc0de;
   cursor: not-allowed;
   background-color: #ffffff;
-  border-color: #dddddd;
+  border-color: #428bca;
 }
 
 .pagination-lg > li > a,
