Added Linkback to Github

--- a/Music Farm v2/Views/Shared/_Layout.cshtml
+++ b/Music Farm v2/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Media Farmer</title>
+    <title>@ViewBag.Title - Media Farmer by Mawashi Entertainment</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/toastrcss")
     @Styles.Render("~/Content/jquery")
@@ -47,7 +47,7 @@
         </div>
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Media Farmer</p>
+            <p>&copy; @DateTime.Now.Year Mawashi Entertainment - <a href = 'http://github.com/slipmatt/mediafarmer'>Media Farmer</a></p>
         </footer>
     </div>
 
