--- a/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice/TracksPage.xaml
+++ b/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice/TracksPage.xaml
@@ -1,11 +1,47 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MediaFarmer.MobileDevice"
-             x:Class="MediaFarmer.MobileDevice.TracksPage">
+﻿<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:b="clr-namespace:MediaFarmer.MobileDevice.Behaviors;assembly=MediaFarmer.MobileDevice" 
+             xmlns:c="clr-namespace:MediaFarmer.MobileDevice.Converters;assembly=MediaFarmer.MobileDevice" 
+             x:Class="MediaFarmer.MobileDevice.TracksPage" Title="Track Search" >
+    <ContentPage.Resources>
+    <ResourceDictionary>
+      <c:ItemTappedEventArgsConverter x:Key="ItemTappedConverter" />
+    </ResourceDictionary>
+</ContentPage.Resources>
+  <ContentPage.ToolbarItems>
+    <!--		<ToolbarItem Text="Sign Up" Clicked="OnSignUpButtonClicked" /> -->
+  </ContentPage.ToolbarItems>
+  <ContentPage.Content>
+    <StackLayout VerticalOptions="StartAndExpand">
+      <Grid>
+        <Grid.RowDefinitions>
+          <RowDefinition Height="150" />
+          <RowDefinition Height="50" />
+          <RowDefinition Height="50" />
+          <RowDefinition Height="50" />
+          <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+       <Entry Text="{Binding TrackSearch}" Placeholder="Search Track" Grid.Row="1" />
+        <Button Text="Search" Command="{Binding ExecuteSearchCommand}" Grid.Row="3" />
+       
+      </Grid>
+      <ListView ItemsSource="{Binding Tracks}"  >
+        <!-- 
+        References for Behaviours
+        https://anthonysimmon.com/eventtocommand-in-xamarin-forms-apps/ 
+        https://blog.xamarin.com/behaviors-in-xamarin-forms/  -->
+        
+        <ListView.Behaviors>
+      <b:EventToCommandBehavior EventName="ItemTapped" Command="{Binding QueSelected}" EventArgsConverter="{StaticResource ItemTappedConverter}"/>
+</ListView.Behaviors>
+        <ListView.ItemTemplate>
+          <DataTemplate>
+            <TextCell Text="{Binding TrackName}" Detail="{Binding ArtistName}"></TextCell>
+            
+          </DataTemplate>
+        </ListView.ItemTemplate>
+      </ListView>
 
-  <Label Text="Welcome to the Tracks Page!"
-           VerticalOptions="Center"
-           HorizontalOptions="Center" />
-
+    </StackLayout>
+  </ContentPage.Content>
 </ContentPage>
