--- a/MusicFarmer.Data/MusicFarmer.Context.tt
+++ b/MusicFarmer.Data/MusicFarmer.Context.tt
@@ -43,6 +43,8 @@ namespace <#=code.EscapeNamespace(codeNamespace)#>
 using System;
 using System.Data.Entity;
 using System.Data.Entity.Infrastructure;
+using TrackerEnabledDbContext.Common.Configuration;
+using TrackerEnabledDbContext.Common.Models;
 <#
 if (container.FunctionImports.Any())
 {
@@ -53,7 +55,7 @@ using System.Linq;
 }
 #>
 
-<#=Accessibility.ForType(container)#> partial class <#=code.Escape(container)#> : DbContext
+<#=Accessibility.ForType(container)#> partial class <#=code.Escape(container)#> : TrackerContext
 {
     public <#=code.Escape(container)#>()
         : base("name=<#=container.Name#>")
